2006-03-24  Mike Kestner  <mkestner@novell.com>

	* ListView.cs: Scroll wheel support for the item control.  Fixes
	#77839.

2006-03-23  Jackson Harper  <jackson@ximian.com>

	* ScrollableControl.cs: Special case negative sized areas, not
	zero.
	* MonthCalendar.cs: Save the rect of the clicked date so we can
	use it for invalidation.
	- Try to cut down on the number of invalidates
	- Invalidate the rect the mouse is over and was over when moving
	the mouse, so we get the focus box following the cursor.

2006-03-23  Mike Kestner  <mkestner@novell.com>

	* ThemeWin32Classic.cs: fix FullRowSelect selection background and
	focus rectangle drawing. Fixes #77835.

2006-03-23  Mike Kestner  <mkestner@novell.com>

	* XplatUIX11.cs: rework the fix for #77828 by changing the order of
	the if and else if and reverting back to the original == check on the
	None conditional.

2006-03-23  Alexander Olk  <alex.olk@googlemail.com>

	* FontDialog.cs: Update the example panel if the selected index of
	  the fontListBox changes.

2006-03-23  Alexander Olk  <alex.olk@googlemail.com>

	* FileDialog.cs: Make FileDialog remember which directory it was in
	  last in the same execution.

2006-03-22  Mike Kestner  <mkestner@novell.com>

	* FileDialog.cs: make the DropDownMenu on the toolbar display
	RadioChecks since they are mutually exclusive and that's what MS does.

2006-03-22  Mike Kestner  <mkestner@novell.com>

	* Theme.cs: add Color param to CPDrawMenuGlyph.
	* ThemeWin32Classic.cs: do color specific menu glyph rendering so that
	checks and radio marks and arrows are visible on highlighted items.
	* ControlPaint.cs: update to use new Theme signature.

2006-03-22  Mike Kestner  <mkestner@novell.com>

	* MenuAPI.cs: only process Enter and arrow keypresses if the tracker
	is active. Fixes #77870.

2006-03-22  Alexander Olk  <alex.olk@googlemail.com>

	* FileDialog.cs: Corrected TabIndex order and set fileNameComboBox
	  to be focused/selected after startup
